--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "description": "lorawan server receiving data via mqtt",
-  "main": "index.js",
+  "main": "lora-server-mqtt.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node lora-server-mqtt.js"
+    "start": "tsc && node dist/lora-server-mqtt.js"
   },
   "author": "Christian Adams <morlac@morlac.de>",
   "license": "MIT",
@@ -18,5 +18,10 @@
     "postgres": "^3.4.4",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/mqtt": "^0.0.34",
+    "globals": "^15.9.0",
+    "typescript": "^5.6.2"
   }
 }
